# Intelygenz

./: .dictionary.txt  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose-ci.yml  docker-compose.integration-tests.yml  docker-compose.yml  envgenerator.py  get_logs_util.sh  lerna.json  log.txt  mkdocs.yml  nats_check.sh  package.json  pyproject.toml  setup.cfg  sonar-project.properties  versions.json
1.112.3/: 404.html  (+2 more)
pyutils_automation/http_client/: pyproject.toml
pyutils_automation/http_client/src/: http_client.py
pyutils_automation/http_client/tests/: http_client_test.py
pyutils_automation/py310/: pyproject.toml
pyutils_automation/py310/src/framework/: __init__.py
pyutils_automation/py310/src/framework/http/: server.py
pyutils_automation/py310/src/framework/logging/: formatters.py  handlers.py
pyutils_automation/py310/src/framework/nats/: client.py  exceptions.py  models.py  temp_payload_storage.py
pyutils_automation/py310/src/framework/storage/: __init__.py  redis_storage.py  task_dispatcher_client.py  utf8_storage.py
pyutils_automation/py310/src/framework/testing/: __init__.py
pyutils_automation/py310/src/tests/nats/: client_test.py  temp_payload_storage_test.py
pyutils_automation/py310/src/tests/storage/: redis_storage_test.py  utf8_storage_test.py
pyutils_automation/py310/tests/framework/http/: server_test.py
pyutils_automation/py310/tests/framework/nats/: client_test.py  temp_payload_storage_test.py
pyutils_automation/py310/tests/framework/storage/: redis_storage_test.py  utf8_storage_test.py
scripts/on-call/: README.md  autoresolve_tickets.py  pyproject.toml
scripts/reports/signet_network_usage/: pyproject.toml  signet_report.py
services/forticloud-bridge/: .gitlab-ci.yml  Dockerfile  README.md  package.json  pyproject.toml
services/forticloud-bridge/src/: app.py
services/forticloud-bridge/src/application/actions/: get_ap_data.py  get_switches_data.py
services/forticloud-bridge/src/application/clients/: forticloud_client.py
services/forticloud-bridge/src/application/models/: subscriptions.py
services/forticloud-bridge/src/application/repositories/: endpoints_usage_repository.py  forticloud_repository.py
services/forticloud-bridge/src/config/: config.py  testconfig.py
services/forticloud-bridge/src/tests/actions/: get_ap_data_test.py  get_switches_data_test.py
services/forticloud-bridge/src/tests/clients/: forticloud_client_test.py
services/forticloud-bridge/src/tests/repositories/: forticloud_repository_test.py
services/forticloud-monitor/: .gitlab-ci.yml  Dockerfile  README.md  ap_actual_response.json  ap_response.json  auto_resolve_corner_cases.txt  corner-cases-email.txt  package.json  pyproject.toml  switch_actual_response.json  switch_response.json
services/forticloud-monitor/src/: app.py  bruin_mock.py  forticloud_mock.py  health_server.py  settings.py
services/forticloud-monitor/src/application/actions/: __init__.py  check_device.py
services/forticloud-monitor/src/application/consumers/: __init__.py  ap_consumer.py  consumer_settings.py  switch_consumer.py
services/forticloud-monitor/src/application/domain/: device.py  errors.py  task.py  ticket.py
services/forticloud-monitor/src/application/models/: device.py  note.py  service_number.py  task.py  ticket.py
services/forticloud-monitor/src/application/repositories/: __init__.py  bruin_repository.py  errors.py  forticloud_repository.py  metrics_repository.py
services/forticloud-monitor/src/check_device/: device.py  device_repository.py  nats_client.py  ticket.py  ticket_repository.py  ticket_service.py  usecase.py
services/forticloud-monitor/src/clients/: __init__.py  nats_client.py
services/forticloud-monitor/src/config/: config.py
services/forticloud-monitor/src/integration_tests/: conftest.py  docker-compose.yml  health_check_test.py  integration_test.py  send_devices_test.py
services/forticloud-monitor/src/shared/: nats_client.py
services/forticloud-monitor/src/tests/: conftest.py  unit_test.py
services/forticloud-monitor/src/tests/actions/: auto_resolve_test.py  check_device_test.py  conftest.py  handle_offline_device_test.py  handle_online_device_test.py
services/forticloud-monitor/tests/: conftest.py
services/forticloud-monitor/tests/check_device_test/: fixtures.py  nats_client_test.py  ticket_repository_test.py  ticket_service_test.py  usecase_test.py
services/forticloud-monitor/tests/check_device_tests/: data.py  usecase_test.py
services/forticloud-monitor/tests/clients/: nats_client_test.py
services/forticloud-monitor/tests/integration_tests/: check_device_test.py
services/intermapper-outage-monitor/: .coveragerc  .gitlab-ci.yml  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  setup.py
services/intermapper-outage-monitor/src/: app.py
services/intermapper-outage-monitor/src/application/: __init__.py
services/intermapper-outage-monitor/src/config/: .template.env  config.py  testconfig.py
services/intermapper-outage-monitor/src/tests/: conftest.py
services/links-metrics-api/: .gitlab-ci.yml  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  setup.py
services/links-metrics-api/src/: app.py
services/links-metrics-api/src/config/: .template.env  config.py
services/links-metrics-collector/: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
services/links-metrics-collector/src/: app.py
services/links-metrics-collector/src/config/: .template.env  config.py
services/repair-tickets-monitor/: .coveragerc  .gitlab-ci.yml  .hadolint.yaml  Dockerfile  Dockerfile   README.md  package.json  packer.pkr.hcl  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
services/repair-tickets-monitor/src/: app.py
services/repair-tickets-monitor/src/application/: exceptions.py  resources.py
services/repair-tickets-monitor/src/config/: .template.env  config.py  configuration.py  testconfig.py
services/repair-tickets-monitor/src/tests/: conftest.py  given.py
(+57723 files in other folders)
