[tool.poetry]
name = "automation-engine"
version = "1.0.0"
description = "Poetry automation-engine monorepo configuration"
authors = []

[tool.poetry.dependencies]
python = "3.6.15"
APScheduler = "3.6.0"
prometheus-client = "0.6.0"
python-dateutil = "2.8.2"
igzpackages = {url = "https://s3pypi.mettel-automation.net/igzpackages/igzpackages-2.0.1.tar.gz"}
pyhumps = "1.3.1"
aiohttp = "3.6.2"
pyzipcode = "3.0.1"
boto3 = "1.21.17"
black = "22.3.0"
isort = "5.10.1"
pydantic = "1.9.0"
mkdocs = "1.3.1"

[tool.poetry.dev-dependencies]
pycodestyle = "2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py36"]
line-length = 120
exclude = ".venv|environment_files_generator.py|lib"

[tool.isort]
py_version=36
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
