[tool.poetry]
name = "automation-engine"
version = "1.1.0"
description = "Poetry automation-engine monorepo configuration"
authors = []

[tool.poetry.dependencies]
python = "3.10.4"
APScheduler = "3.9.1"
prometheus-client = "0.14.1"
python-dateutil = "2.8.2"
framework = {path = "pyutils_automation/py310", develop = false}
pyhumps = "3.7.2"
aiohttp = "3.8.3"
pyzipcode = "3.0.1"
black = "22.3.0"
isort = "5.10.1"
pydantic = "1.9.0"
mkdocs = "1.3.1"
pymdown-extensions = "9.5"
mkdocs-material = "8.3.9"

[tool.poetry.dev-dependencies]
pycodestyle = "2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120
exclude = ".venv|environment_files_generator.py|lib"

[tool.isort]
py_version=310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
