[tool.poetry]
name = "on-call-scripts"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.10.4"
framework = {path = "../../pyutils_automation/py310", develop = false}
ipython = "8.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
