[tool.poetry]
name = "forticloud-monitor"
version = "1.0.0"
description = "MetTel's forticloud devices monitor"
authors = ["Intelygenz"]

[tool.poetry.dependencies]
python = "3.10.4"
pydantic = "1.9.0"
framework = {path = "../../pyutils_automation/py310", develop = false}

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
pytest-cov = "3.0.0"
pytest-bdd = "^6.0.1"
pytest-asyncio = "^0.19.0"
ipython = "8.4.0"
black = "22.3.0"
isort = "5.10.1"
coverage = {extras = ["toml"], version = "6.4.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
py_version=310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["-vv"]
#testpaths = ["tests/"]
#python_files = "*_test.py"
python_functions = "*_test"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "tests/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

ignore_errors = false
fail_under = 80
precision = 2
show_missing = true
