[tool.poetry]
name = "forticloud-monitor"
version = "0.1.0"
description = "MetTel's Automation service for Forticloud monitoring"
authors = ["Intelygenz"]

[tool.poetry.dependencies]
python = "3.10.4"
framework = {path = "../../pyutils_automation/py310", develop = false}

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
pytest = "7.1.3"
pytest-asyncio = "0.18.3"
pytest-cov = "3.0.0"
coverage = {extras = ["toml"], version = "6.4.1"}
ipython = "8.4.0"
# TODO: Move these dependencies to their own group once poetry adds support for Dependency Groups
mkdocs = "1.3.1"
pymdown-extensions = "9.5"
mkdocs-material = "8.3.9"
pytest-docker = "^1.0.1"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
py_version=310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
markers = ["integration"]
pythonpath = ["src"]
addopts = "-vv"
testpaths = [
    "src/tests/",
    "src/integration_tests/",
]
python_files = "*_test.py"
python_functions = "*_test"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "src/app.py",
    "src/tests/*",
    "src/integration_tests/*",
    "src/config/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

ignore_errors = false
fail_under = 80
precision = 2
show_missing = true
