[tool.poetry]
name = "links-metrics-collector"
version = "0.1.0"
description = "MetTel's Automation service for Links Metrics Collector"
authors = ["Intelygenz"]

[tool.poetry.dependencies]
framework = {path = "../../pyutils_automation/py310", develop = false}
python = "3.10.4"
APScheduler = "3.9.1"
prometheus-client = "0.14.1"
pymongo = "4.3.2"

[tool.poetry.dev-dependencies]
framework = {path = "../../pyutils_automation/py310", develop = true}
black = "22.3.0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
py_version=310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
