[tool.poetry]
name = "repair-tickets-monitor"
version = "1.0.0"
description = "MetTel's repair tickets automation"
authors = ["Intelygenz"]

[tool.poetry.dependencies]
python = "3.10.4"
pydantic = "1.9.0"
APScheduler = "3.6.0"
html2text = "2020.1.16"
multipledispatch = "0.6.0"
framework = {path = "../../pyutils_automation/py310", develop = false}
pyhumps = "^3.7.2"
prometheus-client = "^0.14.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
pytest = "6.2.5"
pytest-asyncio = "0.18.3"
pytest-cov = "3.0.0"
coverage = {extras = ["toml"], version = "6.4.1"}
ipython = "8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
py_version=310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
    "src/tests/",
]
python_files = "*_test.py"
python_functions = "*_test"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "src/tests/*",
    "src/config/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

ignore_errors = false
fail_under = 80
precision = 2
show_missing = true
