[tool.poetry]
name = "signet-network-usage"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.10.4"
framework = {path = "../../../pyutils_automation/py310", develop = false}
APScheduler = "3.6.0"
python-dateutil = "2.8.2"
velocloud-bridge = {path = "../../../services/velocloud-bridge", develop = false}
ipython = "8.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
